--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: order, local: true) do |form| %>
+<%= form_with(model: @orders, url: new_restaurant_order_path) do |form| %>
   <% if order.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(order.errors.count, "error") %> prohibited this order from being saved:</h2>
@@ -11,17 +11,21 @@
     </div>
   <% end %>
 
+  <%= form.hidden_field :restaurant_id, value: @restaurant_id %>
+
   <div class="field">
   <%= form.label :customer_id %>
   <%= form.select 'customer_id',
       options_from_collection_for_select(@customers, "id", "name") %>
 </div>
 
-<div class="field">
+<!--
+<div hidden class="field">
   <%= form.label :restaurant_id %>
   <%= form.select 'restaurant_id',
       options_from_collection_for_select(@restaurants, "id", "name") %>
 </div>
+-->
 
   <div class="actions">
     <%= form.submit %>
