got some more stuff working

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -10,5 +10,7 @@
   <%= @order.restaurant.name %>
 </p>
 
+<!-- order.menu_items.each -->
+
 <%= link_to 'Edit', edit_order_path(@order) %> |
 <%= link_to 'Back', orders_path %>
