--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @orders, url: new_restaurant_order_path) do |form| %>
+<%= form_with(model: order, local: true, url: [@restaurant, order]) do |form| %>
   <% if order.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(order.errors.count, "error") %> prohibited this order from being saved:</h2>
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <%= form.hidden_field :restaurant_id, value: @restaurant_id %>
+  <%= form.hidden_field :restaurant_id, value: @restaurant.id %>
 
   <div class="field">
   <%= form.label :customer_id %>
