the order gets created n stuff

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -12,5 +12,5 @@
 
 <!-- order.menu_items.each -->
 
-<%= link_to 'Edit', edit_order_path(@order) %> |
-<%= link_to 'Back', orders_path %>
+<%= link_to 'Edit', edit_restaurant_order_path(@order) %> |
+<%= link_to 'Back', restaurant_orders_path %>
