--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -16,8 +16,8 @@
       <tr>
         <td><%= order.customer.name %></td>
         <td><%= order.restaurant.name %></td>
-        <td><%= link_to 'Show', order %></td>
-        <td><%= link_to 'Edit', edit_order_path(order) %></td>
+        <td><%= link_to 'Show', restaurant_orders_path %></td>
+        <td><%= link_to 'Edit', edit_restaurant_order_path(:restaurant_id, order) %></td>
         <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
