--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Order</h1>
+<h1>New Order for <%= @restaurant.name %> </h1>
 
 <%= render 'form', order: @order %>
 
-<%= link_to 'Back', restaurant_orders_path %>
+<%= link_to 'Back', restaurant_path(@restaurant.id) %>
