--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,18 +1,73 @@
 html {
-  background: rgb(2,0,36);
-  background: linear-gradient(158deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 34%, rgba(0,206,247,1) 100%);
+  background-image: url("https://i.gifer.com/28pr.gif");
+  /*background: rgb(2,0,36);*/
+  /*background: linear-gradient(158deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 34%, rgba(0,206,247,1) 100%);*/
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover;  
 }
 
 body {
   height:800px;
 
-  color: white;
+  color: black;
   margin: 33px;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+
+  cursor: url("http://www.rw-designer.com/cursor-extern.php?id=82056");
+}
+
+#logo {
+  /*transform: scale(.5);*/
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 5%;
+}
+
+.skilletor {
+  text-align: center;
+  font-size: 100px;
+  color: white;
+  font-style: italic;
+
+  margin: 40px auto;
+}
+
+#nav {
+  margin-left: auto;
+  margin-right: auto;
+
+  background-color: rgba(255,255,255,.5);
+  width: 50%;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+#nav a {
+  font-style: bold;
+  font-size: 20px;
+  color: lime;
+  &:visited {
+    color: green;
+  }
+  &:hover {
+    color: #fff;
+  }
+}
+
+#app {
+  /*display: block;*/
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  padding: 50px;
+
+  background-color: rgba(255,255,255,.5);
 }
 
 p, ol, ul, td {
@@ -28,10 +83,10 @@ pre {
 }
 
 a {
-  color: lime;
+  color: blue;
 
   &:visited {
-    color: green;
+    color: darkblue;
   }
 
   &:hover {
@@ -52,6 +107,10 @@ div {
   &.field, &.actions {
     margin-bottom: 10px;
   }
+}
+
+h1 {
+  text-align: center;
 }
 
 #notice {
