--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,18 @@
   </head>
 
   <body>
-    <ul>
-      <li><%= link_to 'Restaurants', restaurants_path %></li>
-      <li><%= link_to 'Menu Items', menu_items_path %></li>
+    <img id="logo" src="https://raw.githubusercontent.com/ramonmcros/skeletor-syntax/master/skeletor-250.png">
+    <div class="skilletor">SKILLETOR</div>
+    <ul id="nav">
+      <li><%= link_to 'Restaurants', restaurants_path %>&nbsp;</li>
+      <li><%= link_to 'Menu Items', menu_items_path %>&nbsp;</li>
       <li><%= link_to 'Customers', customers_path %></li>
+      <li>&nbsp;&nbsp;&nbsp;</li>
     </ul>
-    <%= yield %>
+
+
+    <br/>
+    <div id="app"><%= yield %></div>
+
   </body>
 </html>
