--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -4,6 +4,8 @@ html {
   /*background: linear-gradient(158deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 34%, rgba(0,206,247,1) 100%);*/
   background-repeat: no-repeat;
   background-size: cover;  
+
+  cursor:url('http://www.rw-designer.com/cursor-extern.php?id=82056'), auto;
 }
 
 body {
@@ -15,7 +17,7 @@ body {
   font-size: 13px;
   line-height: 18px;
 
-  cursor: url("http://www.rw-designer.com/cursor-extern.php?id=82056");
+  
 }
 
 #logo {
